# dcc

./: .gitignore  Cargo.toml  Dockerfile-gemma4-agent  Dockerfile-qwen3.5-65k  QUICKSTART.md  TABLET_SUPPORT.md  generate_uv_grid.py  implementation_plan.md  run_ollama.bat  run_ollama.md  spec.md
.cargo/: config.toml
.dcc-painter/: settings.toml
models/: aircon.glb  outdoor-split-air-conditioner_2K_e4614417-d2a6-4f1f-b7be-0edf1e1d757f.blend
src/: app.rs  lib.rs  main.rs  mesh.rs  painter.rs  raycast.rs  viewport.rs
src/app/: actions.rs  app_state.rs  input_editor.rs  mod.rs  render.rs  settings.rs  surface.rs  tools.rs  types.rs  ui.rs  ui_panels.rs  user_preferences.rs
src/app/architecture/: input.rs  message.rs  mod.rs  reducer.rs  state.rs  tool.rs
src/app/ecs/: domain.rs  mod.rs
src/app/ecs/plugins/: asset_io.rs  core.rs  document.rs  input.rs  mod.rs  render.rs  tool.rs  ui.rs
src/app/input/: mod.rs
src/core/: input.rs  mod.rs  preferences.rs  raycast.rs
src/graphics/: mod.rs  painter.rs  viewport.rs
src/graphics/mesh/: geometry.rs  loader.rs  mod.rs  primitive_generator.rs  uv.rs
src/mesh/: geometry.rs  gltf_loader.rs  mod.rs  primitive_generator.ts  uv_projector.rs
src/shaders/: 3d_mesh.wgsl  brush.wgsl  composite.wgsl  fill.wgsl
tests/: gltf_integration.rs
tests/common/: mod.rs
