[package]
name = "dcc-painter"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "29.0.3"
winit = "0.30"
glam = "0.25.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
image = "0.25.1"
pollster = "0.3.0"
log = "0.4.21"
env_logger = "0.11.3"
egui = "0.34.3"
egui-winit = "0.34.3"
egui-wgpu = "0.34.3"
gltf = "1.4.1"
rfd = "0.14"
memmap2 = "0.9"
egui-phosphor = "0.12"
