[package]
name = "dcc-painter"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "29.0"
winit = "0.30"
glam = "0.33"
bytemuck = { version = "1.16", features = ["derive"] }
image = "0.25"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
egui = "0.34"
egui-winit = "0.34"
egui-wgpu = "0.34"
gltf = "1.4"
rfd = "0.17"
memmap2 = "0.9"
egui-phosphor = "0.12"
